--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#3498db">
   <title>Password Manager Aman</title>
   <link rel="stylesheet" href="styles.css">
   <!-- Muat library CryptoJS -->
@@ -55,5 +57,18 @@
   
   <!-- Impor modul utama -->
   <script type="module" src="./js/app.js"></script>
+  <script>
+    // Pendaftaran service worker
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('./service-worker.js').then(function(registration) {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          console.log('ServiceWorker registration failed: ', err);
+        });
+      });
+    }
+  </script>
+  
 </body>
 </html>
